# compiler-cpp

./: .gitignore  CMakeLists.txt  conanfile.txt  vcpkg.json
.github/workflows/: build.yml
src/: main.cpp
src/grammar/: CovaLexer.g4  CovaParser.g4  generate.ps1
src/lexer/: Token.hpp  TokenType.hpp  install-re2c.ps1  lex.hpp  lex.re.cpp  lexer.hpp  lexer.re.cpp  run-re2c.ps1  unicode.re.txt
src/lexer/TokenIterators/: DentedTokenIterator.hpp  TokenIterator.hpp
